added configuration lexer and parsers + test

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>4.12</version>
         </dependency>
         <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>4.6</version>
+        </dependency>
+        <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>junit-dataprovider</artifactId>
             <version>1.10.0</version>
